Problems with checking valid id's in rentals and valid hours
